Refactor CI workflow to reflect updated project structure
- Updated paths in the CI configuration to point to the new portfolio/api and portfolio/web directories for building and testing.
- Ensured that the CI process aligns with the recent restructuring of the project.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,22 +22,22 @@ jobs:
 
     - name: Build backend
       run: |
-        cd api
+        cd portfolio/api
         cargo build --verbose
 
     - name: Build frontend
       run: |
-        cd web
+        cd portfolio/web
         cargo build --verbose
 
     - name: Run backend tests
       run: |
-        cd api
+        cd portfolio/api
         cargo test --verbose -- --test-threads=1
 
     - name: Run frontend tests
       run: |
-        cd web
+        cd portfolio/web
         cargo test --verbose -- --test-threads=1
 
     - name: Check formatting
