--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -23,22 +23,22 @@ jobs:
     - name: Build backend
       run: |
         cd portfolio/api
-        cargo build --verbose
+        cargo build --tests --verbose
 
-    - name: Build frontend
-      run: |
-        cd portfolio/web
-        cargo build --verbose
+    # - name: Build frontend
+    #   run: |
+    #     cd portfolio/web
+    #     cargo build --verbose
 
     - name: Run backend tests
       run: |
         cd portfolio/api
         cargo test --verbose -- --test-threads=1
 
-    - name: Run frontend tests
-      run: |
-        cd portfolio/web
-        cargo test --verbose -- --test-threads=1
+    # - name: Run frontend tests
+    #   run: |
+    #     cd portfolio/web
+    #     cargo test --verbose -- --test-threads=1
 
     - name: Check formatting
       run: |
