Update CI workflow to include static analysis and formatting checks for backend

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -42,8 +42,10 @@ jobs:
 
     - name: Check formatting
       run: |
+        cd portfolio/api
         cargo fmt --all -- --check
 
     - name: Static analysis
       run: |
+        cd portfolio/api
         cargo clippy -- -D warnings
