Update CI workflow to enable clippy tests in static analysis step
- Modified the CI configuration to run `cargo clippy` with the `--tests` flag, ensuring that linting checks are applied to both the main code and test files for improved code quality.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -48,4 +48,4 @@ jobs:
     - name: Static analysis
       run: |
         cd portfolio/api
-        cargo clippy -- -D warnings
+        cargo clippy --tests -- -D warnings
