Enhance backend functionality and CI configuration
- Updated CI workflow to include environment variables for MongoDB and Brevo API integration.
- Added a new Rust script for regular data cleaning in the MongoDB `tweets` collection to ensure data integrity.
- Refactored database initialization to use MongoDB instead of SQLite, aligning with project requirements.
- Implemented functionality to retrieve the latest tweets from the database, enhancing the RSS feed service.
- Expanded project documentation to include details on the new data cleaning process and its execution methods.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -6,6 +6,14 @@ on:
   pull_request:
     branches: [ main ]
 
+env:
+  MONGO_URL: ${{ secrets.MONGO_URL }}
+  BREVO_API_KEY: ${{ secrets.BREVO_API_KEY }}
+  RECIPIENT_EMAIL: ${{ secrets.RECIPIENT_EMAIL }}
+  SENDER_NAME: ${{ secrets.SENDER_NAME }}
+  SENDER_EMAIL: ${{ secrets.SENDER_EMAIL }}
+  BREVO_API_URL: "https://api.brevo.com/v3/smtp/email"
+
 jobs:
 
   build:
