--- a/portfolio/api/Cargo.toml
+++ b/portfolio/api/Cargo.toml
@@ -11,7 +11,8 @@ actix-web = "4.9"
 actix-cors = "0.7"
 
 # Database
-rusqlite = { version = "0.32", features = ["bundled"] }
+mongodb = "3.1"
+futures = "0.3"
 
 # Async runtime
 tokio = { version = "1.43", features = ["full"] }
@@ -34,6 +35,9 @@ chrono = { version = "0.4", features = ["serde"] }
 
 # HTTP client
 reqwest = { version = "0.11", features = ["json"] }
+
+# Database client
+sqlx = { version = "0.6", features = ["runtime-tokio-rustls", "postgres"] }
 
 [dev-dependencies]
 # Testing
