--- a/portfolio/api/Cargo.toml
+++ b/portfolio/api/Cargo.toml
@@ -34,6 +34,8 @@ chrono = { version = "0.4", features = ["serde"] }
 
 # HTTP client
 reqwest = { version = "0.11", features = ["json"] }
+url = "2.5.4"
+rss = "2.0.11"
 
 [dev-dependencies]
 # Testing
