Update CI configuration and enhance backend functionality
- Added HOST and PORT environment variables to the CI workflow for improved email service configuration.
- Introduced futures-util dependency in Cargo.toml to support asynchronous programming.
- Refactored main.rs to streamline route handling and updated the RSS route to use get_rss_items.
- Enhanced error handling in the RSS service to log errors and return appropriate HTTP status codes.
- Updated test utilities for database management, including a new cleanup function for test databases.
- Removed the unused utils module to clean up the codebase.

--- a/portfolio/api/Cargo.toml
+++ b/portfolio/api/Cargo.toml
@@ -44,6 +44,7 @@ validator_derive = "0.19.0"
 tracing = "0.1.41"
 tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
 tower = { version = "0.5.2", features = ["util"] }
+futures-util = "0.3.31"
 
 [dev-dependencies]
 mockito = "1.6.1"
