--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,7 +12,9 @@ env:
   RECIPIENT_EMAIL: ${{ secrets.RECIPIENT_EMAIL }}
   SENDER_NAME: ${{ secrets.SENDER_NAME }}
   SENDER_EMAIL: ${{ secrets.SENDER_EMAIL }}
-  BREVO_API_URL: "https://api.brevo.com/v3/smtp/email"
+  HOST: ${{ secrets.HOST }}
+  PORT: ${{ secrets.PORT }}
+
 
 jobs:
 
