--- a/portfolio/api/Cargo.toml
+++ b/portfolio/api/Cargo.toml
@@ -45,9 +45,12 @@ tracing = "0.1.41"
 tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
 tower = { version = "0.5.2", features = ["util"] }
 futures-util = "0.3.31"
+sys-info = "0.9.1"
 
 [dev-dependencies]
+filetime = "0.2.25"
 mockito = "1.6.1"
+tempfile = "3.15.0"
 # Testing
 tokio-test = "0.4"
 wiremock = "0.5"
