--- a/portfolio/api/Cargo.toml
+++ b/portfolio/api/Cargo.toml
@@ -46,6 +46,7 @@ tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
 tower = { version = "0.5.2", features = ["util"] }
 futures-util = "0.3.31"
 sys-info = "0.9.1"
+once_cell = "1.20.2"
 
 [dev-dependencies]
 filetime = "0.2.25"
