Update CI configuration and TODO list
- Added RUST_LOG and RUST_BACKTRACE environment variables to the CI workflow for improved debugging.
- Modified backend test command to include --nocapture for better visibility of test output.
- Updated TODO.md to reflect the change in frontend technology from Yew/Percy to Dioxus, enhancing project clarity.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,7 +14,8 @@ env:
   SENDER_EMAIL: ${{ secrets.SENDER_EMAIL }}
   HOST: ${{ secrets.HOST }}
   PORT: ${{ secrets.PORT }}
-
+  RUST_LOG: debug
+  RUST_BACKTRACE: 1
 
 jobs:
 
@@ -43,7 +44,7 @@ jobs:
     - name: Run backend tests
       run: |
         cd portfolio/api
-        cargo test --verbose -- --test-threads=1
+        cargo test --verbose -- --nocapture --test-threads=1
 
     # - name: Run frontend tests
     #   run: |
