--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -37,7 +37,7 @@ jobs:
         ports:
           - 27017:27017
         options: >-
-          --health-cmd mongosh --eval "db.adminCommand('ping')"
+          --health-cmd "mongosh --quiet --eval 'db.runCommand(\"ping\").ok'"
           --health-interval 10s
           --health-timeout 5s
           --health-retries 5
