feat(portfolio): migrate frontend to Astro framework and enhance project structure
- Replaced Dioxus with Astro for the frontend development, introducing a new architecture that includes TypeScript and TailwindCSS for styling.
- Added Playwright for end-to-end testing, with a dedicated CI workflow for automated test execution.
- Updated project documentation to reflect the new technologies and practices, including coding conventions and testing strategies.
- Enhanced .gitignore files to exclude unnecessary build artifacts and environment files.
- Created essential configuration files for Astro, including `astro.config.mjs` and `tailwind.config.mjs`.
- Implemented new page and component structures, including layouts and assets, to improve maintainability and organization.

These changes significantly modernize the frontend stack, ensuring a more efficient development process and improved user experience.

--- a/.gitignore
+++ b/.gitignore
@@ -30,4 +30,15 @@ rust-project.json
 # Backup
 backup/
 
+# Astro
+.astro
+
+# Node
+node_modules/
+
+# vscode
+.vscode/
+
+
+
 # End of https://www.toptal.com/developers/gitignore/api/rust,rust-analyzer,dotenv
