--- a/portfolio/web/package.json
+++ b/portfolio/web/package.json
@@ -14,6 +14,7 @@
         "@astrojs/mdx": "^4.0.6",
         "@astrojs/sitemap": "^3.2.1",
         "@astrojs/tailwind": "^5.1.4",
+        "@fortawesome/fontawesome-free": "^6.7.2",
         "astro": "^5.1.7",
         "astro-i18next": "^1.0.0-beta.21",
         "tailwindcss": "^3.4.17",
