chore(ci): update CI workflows for enhanced permissions and Rust toolchain
- Added permissions for contents, checks, pull-requests, and issues in both CI workflows to improve access control.
- Updated Rust toolchain action in the CI configuration to a more specific version for better stability and compatibility.
- Ensured both CI workflows are aligned with the latest practices for improved maintainability and functionality.

--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -4,6 +4,13 @@ on:
     branches: [ main, master ]
   pull_request:
     branches: [ main, master ]
+
+permissions:
+  contents: read
+  checks: read
+  actions: read
+  pull-requests: write
+
 jobs:
   test:
     timeout-minutes: 60
