feat(portfolio): implement contact form and enhance frontend components
- Added a new ContactForm component with validation and error handling, improving user interaction for message submissions.
- Introduced a ToastManager for managing toast notifications, enhancing feedback for users on form submissions.
- Updated the layout and styling of the contact page for better user experience and responsiveness.
- Enhanced existing components (Input, Toast) with improved accessibility and error handling features.
- Added comprehensive end-to-end tests for the contact form and toast notifications, ensuring robust functionality and reliability.

These changes significantly enhance the usability and interactivity of the portfolio, providing a seamless experience for users to get in touch.

--- a/portfolio/api/.env.example
+++ b/portfolio/api/.env.example
@@ -23,3 +23,6 @@ MONGO_PASSWORD=
 MONGO_DB=
 MONGO_INITDB_ROOT_USERNAME=
 MONGO_INITDB_ROOT_PASSWORD=
+
+# Frontend URL for CORS
+FRONTEND_URL=http://localhost:4321
