--- a/portfolio/api/Cargo.toml
+++ b/portfolio/api/Cargo.toml
@@ -38,12 +38,12 @@ lazy_static = "1.5.0"
 handlebars = "4.3"
 async-channel = "1.8"
 axum = { version = "0.8.1", features = ["tower-log"] }
-tower-http = { version = "0.6.2", features = ["cors"] }
+tower-http = { version = "0.6.2", features = ["cors", "limit", "trace"] }
 validator = "0.19.0"
 validator_derive = "0.19.0"
 tracing = "0.1.41"
 tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
-tower = { version = "0.5.2", features = ["util"] }
+tower = { version = "0.5.2", features = ["util", "limit"] }
 futures-util = "0.3.31"
 sys-info = "0.9.1"
 once_cell = "1.20.2"
