--- a/portfolio/web/package.json
+++ b/portfolio/web/package.json
@@ -11,6 +11,7 @@
         "test:e2e": "playwright test"
     },
     "dependencies": {
+        "@astrojs/check": "^0.9.4",
         "@astrojs/mdx": "^4.0.6",
         "@astrojs/sitemap": "^3.2.1",
         "@astrojs/tailwind": "^5.1.4",
