--- a/portfolio/api/.env.example
+++ b/portfolio/api/.env.example
@@ -1,28 +1,19 @@
-# Brevo API Configuration
-BREVO_API_KEY=
-RECIPIENT_EMAIL=
-SENDER_NAME=
-SENDER_EMAIL=
-
-# Server Configuration
+# MongoDB Configuration
+MONGO_URL=mongodb://user:password@localhost:27017/portfolio
+HOST=127.0.0.1
 PORT=8080
-HOST="127.0.0.1"
 
-# Environment
-RUST_LOG="info"
+# RSS Configuration
+RSS_CACHE_DURATION=3600
+RSS_SOURCE_URL=mongodb://user:password@localhost:27017
+RSS_SOURCE_DB=rss_reader
+RSS_SOURCE_COLLECTION=items
 
-# Database
-MONGO_URL=mongodb://localhost:27017
-DATABASE_NAME=
-BACKUP_DIR="backup"
-RETENTION_DAYS=7
+# Email Configuration
+BREVO_API_KEY=your_brevo_api_key
+RECIPIENT_EMAIL=your_email@example.com
+SENDER_NAME=Portfolio Contact Form
+SENDER_EMAIL=no-reply@example.com
 
-# MongoDB
-MONGO_USER=
-MONGO_PASSWORD=
-MONGO_DB=
-MONGO_INITDB_ROOT_USERNAME=
-MONGO_INITDB_ROOT_PASSWORD=
-
-# Frontend URL for CORS
+# Frontend Configuration
 FRONTEND_URL=http://localhost:4321
