--- a/portfolio/api/Cargo.toml
+++ b/portfolio/api/Cargo.toml
@@ -47,6 +47,8 @@ tower = { version = "0.5.2", features = ["util", "limit"] }
 futures-util = "0.3.31"
 sys-info = "0.9.1"
 once_cell = "1.20.2"
+urlencoding = "2.1.3"
+scraper = "0.18.1"
 
 [dev-dependencies]
 filetime = "0.2.25"
