--- a/portfolio/web/package.json
+++ b/portfolio/web/package.json
@@ -8,7 +8,8 @@
         "build": "astro check && astro build",
         "preview": "astro preview",
         "astro": "astro",
-        "test:e2e": "playwright test"
+        "test:e2e": "cross-env MODE=test PUBLIC_API_URL=http://localhost:8080 playwright test --retries=2 --workers=1",
+        "test:e2e:ui": "cross-env MODE=test PUBLIC_API_URL=http://localhost:8080 playwright test --ui"
     },
     "dependencies": {
         "@astrojs/check": "^0.9.4",
@@ -23,8 +24,10 @@
     },
     "devDependencies": {
         "@playwright/test": "^1.49.1",
+        "@tailwindcss/line-clamp": "^0.4.4",
         "@types/node": "^22.10.7",
         "@types/three": "^0.172.0",
+        "cross-env": "^7.0.3",
         "typescript": "^5.7.3"
     }
 }
