chore(portfolio): update Cargo.toml and deny.toml for license management
- Added "MIT" license to Cargo.toml to clarify project licensing.
- Expanded the list of allowed licenses in deny.toml to include "CC0-1.0", enhancing license compliance and management.

These changes improve the clarity of licensing information and ensure better compliance with open-source standards.

--- a/portfolio/api/Cargo.toml
+++ b/portfolio/api/Cargo.toml
@@ -4,6 +4,7 @@ version = "0.1.0"
 edition = "2021"
 authors = ["Mathieu Piton"]
 description = "Backend API for Mathieu Piton's portfolio"
+license = "MIT"
 
 [dependencies]
 
