--- a/portfolio/api/deny.toml
+++ b/portfolio/api/deny.toml
@@ -1,40 +1,36 @@
 [advisories]
 db-path = "~/.cargo/advisory-db"
-ignore = [
-    # instant est une dépendance indirecte de wiremock (dev-dependency)
-    "RUSTSEC-2024-0384",
-]
+ignore = ["RUSTSEC-2024-0384"]
 
 [licenses]
-# We want really high confidence when inferring licenses from text
-confidence-threshold = 0.93
 allow = [
     "Apache-2.0",
-    "Apache-2.0 WITH LLVM-exception",
     "MIT",
-    "MPL-2.0",
-    "BSD-3-Clause",
     "ISC",
+    "BSD-3-Clause",
     "Unicode-3.0",
     "CC0-1.0",
+    "OpenSSL",
+    "Zlib",
+    "MPL-2.0",
+    "Apache-2.0 WITH LLVM-exception",
 ]
+confidence-threshold = 0.8
 exceptions = [
-    # Use exceptions for these as they only have a single user
-    { allow = ["Zlib"], crate = "tinyvec" },
-    { allow = ["OpenSSL"], crate = "ring" },
+    { allow = [
+        "Zlib",
+    ], crate = "tinyvec" },
+    { allow = [
+        "ISC",
+        "MIT",
+        "OpenSSL",
+    ], crate = "ring" },
 ]
 
 [bans]
 multiple-versions = "warn"
-highlight = "all"
-skip = [
-    # Dépendances communes qui peuvent avoir plusieurs versions
-    { name = "serde" },
-    { name = "serde_json" },
-]
 
 [sources]
-unknown-registry = "deny"
-unknown-git = "deny"
+unknown-registry = "warn"
+unknown-git = "warn"
 allow-registry = ["https://github.com/rust-lang/crates.io-index"]
-allow-git = []
