feat(portfolio): implement PWA support and enhance site configuration
- Added PWA support by integrating @vite-pwa/astro and configuring service worker settings.
- Created a new PWA configuration file to manage app manifest and caching strategies.
- Implemented a script to generate PWA assets, including icons and manifest.
- Updated the Astro configuration to include PWA integration and improved site settings.
- Enhanced the frontend structure by adding a PWA manager component for user notifications.
- Updated dependencies in package.json and package-lock.json for improved functionality.

These changes significantly enhance the portfolio's capabilities, providing offline support and a better user experience.

--- a/portfolio/web/.gitignore
+++ b/portfolio/web/.gitignore
@@ -1,11 +1,17 @@
 # build output
 dist/
+.output/
 
 # generated types
 .astro/
 
 # dependencies
 node_modules/
+
+# PWA
+dev-dist/
+public/manifest.webmanifest
+public/icon-*.png
 
 # logs
 npm-debug.log*
