feat(portfolio): enhance development workflow and testing infrastructure
- Added `start-dev.bat` script for simplified local development environment setup
- Updated Playwright configuration to improve test stability and debugging
- Refactored contact and RSS form tests for better error handling and reliability
- Implemented a new ToastManager for consistent toast notifications across components
- Enhanced input validation and error handling in contact and RSS components
- Removed Playwright GitHub Actions workflow and updated local test scripts
- Improved MongoDB initialization script with test data generation

These changes significantly improve the development experience, testing infrastructure, and user interaction feedback in the portfolio project.

--- a/portfolio/web/package.json
+++ b/portfolio/web/package.json
@@ -8,8 +8,11 @@
         "build": "npm run generate-pwa && astro build",
         "preview": "astro preview",
         "astro": "astro",
-        "test:e2e": "cross-env MODE=test PUBLIC_API_URL=http://localhost:8080 playwright test --retries=2 --workers=1",
+        "test:e2e": "cross-env MODE=test PUBLIC_API_URL=http://localhost:8080 playwright test",
+        "test:e2e:ci": "cross-env MODE=test PUBLIC_API_URL=http://localhost:8080 playwright test --retries=2 --workers=1",
         "test:e2e:ui": "cross-env MODE=test PUBLIC_API_URL=http://localhost:8080 playwright test --ui",
+        "test:e2e:debug": "cross-env MODE=test PUBLIC_API_URL=http://localhost:8080 playwright test --debug",
+        "test:e2e:single": "cross-env MODE=test PUBLIC_API_URL=http://localhost:8080 playwright test --project=chromium",
         "generate-pwa": "node scripts/generate-pwa-assets.js"
     },
     "dependencies": {
