--- a/portfolio/web/package.json
+++ b/portfolio/web/package.json
@@ -2,6 +2,9 @@
     "name": "web",
     "type": "module",
     "version": "0.0.1",
+    "engines": {
+        "node": ">=20.0.0"
+    },
     "scripts": {
         "dev": "astro dev",
         "start": "astro dev",
@@ -24,7 +27,7 @@
         "@fortawesome/fontawesome-free": "^7.0.1",
         "astro": "^5.13.7",
         "sharp": "^0.34.2",
-        "tailwindcss": "^3.0.24",
+        "tailwindcss": "^3.4.17",
         "three": "^0.180.0",
         "workbox-window": "^7.3.0"
     },
