--- a/portfolio/api/Cargo.toml
+++ b/portfolio/api/Cargo.toml
@@ -13,7 +13,7 @@ mongodb = "3.3.0"
 futures = "0.3"
 
 # Async runtime
-tokio = { version = "1.47.1", features = ["full"] }
+tokio = { version = "1.47.1", features = ["rt-multi-thread", "macros", "net", "sync"] }
 
 # Serialization
 serde = { version = "1.0.221", features = ["derive"] }
