🙈 chore: add Claude Code artifacts to gitignore
Exclude .claude/ directory and CLAUDE.md file from version control to keep repository clean from Claude Code-specific files.

--- a/.gitignore
+++ b/.gitignore
@@ -40,6 +40,10 @@ node_modules/
 # vscode
 .vscode/
 
+# claude
+.claude/
+CLAUDE.md
+
 
 
 # End of https://www.toptal.com/developers/gitignore/api/rust,rust-analyzer,dotenv
