📌 chore: pin Rust toolchain and MongoDB versions
- Set explicit Rust toolchain version (1.89.0) in CI workflows for reproducible builds
- Update MongoDB Docker image from 7.0-rc to stable 7.0 release
- Improves build consistency and stability across environments

--- a/portfolio/api/docker-compose.yml
+++ b/portfolio/api/docker-compose.yml
@@ -1,6 +1,6 @@
 services:
   mongodb:
-    image: mongo:7.0-rc
+    image: mongo:7.0
     container_name: portfolio_mongodb
     restart: unless-stopped
     environment:
