--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -56,6 +56,7 @@ jobs:
     - name: Set up Rust
       uses: dtolnay/rust-toolchain@a54c7afa936fefeb4456b2dd8068152669aa8203
       with:
+        toolchain: "1.89.0"
         components: rustfmt, clippy
 
     - name: Cache dependencies
@@ -95,6 +96,7 @@ jobs:
       - name: Set up Rust
         uses: dtolnay/rust-toolchain@a54c7afa936fefeb4456b2dd8068152669aa8203
         with:
+          toolchain: "1.89.0"
           components: rustfmt, clippy
 
       - name: Install cargo-audit
