--- a/portfolio/web/package.json
+++ b/portfolio/web/package.json
@@ -19,25 +19,27 @@
         "generate-pwa": "node scripts/generate-pwa-assets.js"
     },
     "dependencies": {
-        "@astrojs/check": "^0.9.4",
-        "@astrojs/mdx": "^4.3.0",
+        "@astrojs/check": "^0.9.5",
+        "@astrojs/mdx": "^4.3.8",
         "@astrojs/partytown": "^2.1.4",
-        "@astrojs/sitemap": "^3.5.1",
-        "@astrojs/tailwind": "^6.0.2",
-        "@fortawesome/fontawesome-free": "^7.0.1",
-        "astro": "^5.13.7",
-        "sharp": "^0.34.2",
-        "tailwindcss": "^3.4.17",
+        "@astrojs/sitemap": "^3.6.0",
+        "@fortawesome/fontawesome-free": "^7.1.0",
+        "@tailwindcss/vite": "^4.1.16",
+        "astro": "^5.15.1",
+        "sharp": "^0.34.4",
+        "tailwindcss": "^4.1.16",
         "three": "^0.180.0",
         "workbox-window": "^7.3.0"
     },
     "devDependencies": {
-        "@playwright/test": "^1.55.0",
-        "@tailwindcss/line-clamp": "^0.4.4",
-        "@types/node": "^24.3.3",
+        "@playwright/test": "^1.56.1",
+        "@tailwindcss/postcss": "^4.1.16",
+        "@types/node": "^24.9.1",
         "@types/three": "^0.180.0",
-        "@vite-pwa/astro": "^1.1.0",
-        "cross-env": "^10.0.0",
-        "typescript": "^5.9.2"
+        "@vite-pwa/astro": "^1.1.1",
+        "autoprefixer": "^10.4.21",
+        "cross-env": "^10.1.0",
+        "postcss": "^8.5.6",
+        "typescript": "^5.9.3"
     }
 }
