fix(ci): correct SonarQube configuration for backend and frontend
- Improve clippy report generation with validation and fallback to valid JSON
- Simplify SonarQube scanner parameters (centralize in properties files)
- Remove invalid language forcing (sonar.language=rust/ts)
- Comment out non-existent coverage report paths
- Add Astro-specific and build artifact exclusions
- Remove redundant environment variables
- Fix HTTP 403 error on sonar-scanner download by using simplified workflow

Backend:
- Validate clippy-report.json is not empty, fallback to []
- Remove duplicate -Dsonar parameters from CLI

Frontend:
- Comment lcov.reportPaths as coverage generation not available
- Remove -Dsonar.language=ts for auto-detection
- Add **.test.ts and .astro exclusions

Fixes: PR #28 CI failures (exit codes 101 and 8)

--- a/.github/workflows/sonarqube.yml
+++ b/.github/workflows/sonarqube.yml
@@ -38,7 +38,12 @@ jobs:
       - name: Build and generate clippy report
         run: |
           cd portfolio/api
-          cargo clippy --all-targets --all-features --message-format json > target/clippy-report.json || true
+          # Generate clippy report with proper error handling
+          cargo clippy --all-targets --all-features --message-format json 2>&1 | tee target/clippy-report.json || true
+          # Validate report is not empty, create valid empty JSON array if needed
+          if [ ! -s target/clippy-report.json ]; then
+            echo "[]" > target/clippy-report.json
+          fi
           cargo build --verbose
 
       - name: Run tests with coverage
@@ -58,14 +63,8 @@ jobs:
         run: |
           cd portfolio/api
           ${{ runner.temp }}/sonar/sonar-scanner-6.1.0.4477-linux/bin/sonar-scanner \
-            -Dsonar.projectKey=folio-api \
-            -Dsonar.projectName=Folio API Backend \
-            -Dsonar.sources=src \
             -Dsonar.host.url=${{ secrets.SONAR_HOST_URL }} \
             -Dsonar.login=${{ secrets.SONAR_TOKEN }}
-        env:
-          SONAR_HOST_URL: ${{ secrets.SONAR_HOST_URL }}
-          SONAR_LOGIN: ${{ secrets.SONAR_TOKEN }}
 
   sonarqube-frontend:
     name: SonarQube Frontend (Astro/TypeScript)
@@ -110,15 +109,8 @@ jobs:
         run: |
           cd portfolio/web
           ${{ runner.temp }}/sonar/sonar-scanner-6.1.0.4477-linux/bin/sonar-scanner \
-            -Dsonar.projectKey=folio-web \
-            -Dsonar.projectName=Folio Web Frontend \
-            -Dsonar.sources=src \
-            -Dsonar.language=ts \
             -Dsonar.host.url=${{ secrets.SONAR_HOST_URL }} \
             -Dsonar.login=${{ secrets.SONAR_TOKEN }}
-        env:
-          SONAR_HOST_URL: ${{ secrets.SONAR_HOST_URL }}
-          SONAR_LOGIN: ${{ secrets.SONAR_TOKEN }}
 
   sonarqube-report:
     name: Create SonarQube Report
