--- a/portfolio/api/sonar-project.properties
+++ b/portfolio/api/sonar-project.properties
@@ -3,13 +3,13 @@ sonar.projectName=Folio API Backend
 sonar.projectVersion=1.0.0
 sonar.sources=src
 sonar.sourceEncoding=UTF-8
-sonar.language=rust
 
-# Rust specific analysis
-sonar.rust.clippy.reportPaths=target/clippy-report.json
+# Rust specific analysis (optional - clippy report for external analyzers)
+# Note: SonarQube does not natively support Rust. This report is for community plugins.
+# sonar.rust.clippy.reportPaths=target/clippy-report.json
 
-# Coverage
-sonar.coverage.exclusions=**/tests/**,**/benches/**
+# Coverage exclusions
+sonar.coverage.exclusions=**/tests/**,**/benches/**,**/target/**
 
-# Exclusions
-sonar.exclusions=**/tests/**,**/benches/**,**/target/**
+# General exclusions
+sonar.exclusions=**/tests/**,**/benches/**,**/target/**,**/*.toml,**/Cargo.lock
