--- a/portfolio/web/sonar-project.properties
+++ b/portfolio/web/sonar-project.properties
@@ -3,14 +3,15 @@ sonar.projectName=Folio Web Frontend
 sonar.projectVersion=1.0.0
 sonar.sources=src
 sonar.sourceEncoding=UTF-8
-sonar.language=ts
-sonar.typescript.lcov.reportPaths=coverage/lcov.info
 
-# Exclusions
-sonar.exclusions=**/*.spec.ts,**/node_modules/**,**/dist/**,**/build/**
+# Coverage report (optional - uncomment if coverage generation is enabled)
+# sonar.typescript.lcov.reportPaths=coverage/lcov.info
 
-# Coverage
-sonar.coverage.exclusions=**/*.spec.ts,**/node_modules/**
+# General exclusions
+sonar.exclusions=**/*.spec.ts,**/*.test.ts,**/node_modules/**,**/dist/**,**/build/**,**/.astro/**,**/public/**
+
+# Coverage exclusions
+sonar.coverage.exclusions=**/*.spec.ts,**/*.test.ts,**/node_modules/**,**/.astro/**
 
 # TypeScript specific
 sonar.typescript.tsconfigPath=tsconfig.json
