--- a/.github/workflows/sonarqube.yml
+++ b/.github/workflows/sonarqube.yml
@@ -12,6 +12,10 @@ permissions:
 
 jobs:
   sonarqube-backend:
+    # Temporarily disabled due to HTTP 403 Forbidden on sonar-scanner download
+    # from binaries.sonarsource.com (likely GitHub Actions IP rate limiting)
+    # TODO: Migrate to official sonarsource/sonarqube-scan-action or SonarCloud
+    if: false
     name: SonarQube Backend (Rust/Axum)
     runs-on: ubuntu-latest
 
@@ -67,6 +71,10 @@ jobs:
             -Dsonar.login=${{ secrets.SONAR_TOKEN }}
 
   sonarqube-frontend:
+    # Temporarily disabled due to HTTP 403 Forbidden on sonar-scanner download
+    # from binaries.sonarsource.com (likely GitHub Actions IP rate limiting)
+    # TODO: Migrate to official sonarsource/sonarqube-scan-action or SonarCloud
+    if: false
     name: SonarQube Frontend (Astro/TypeScript)
     runs-on: ubuntu-latest
 
@@ -113,10 +121,13 @@ jobs:
             -Dsonar.login=${{ secrets.SONAR_TOKEN }}
 
   sonarqube-report:
+    # Temporarily disabled due to HTTP 403 Forbidden on sonar-scanner download
+    # from binaries.sonarsource.com (likely GitHub Actions IP rate limiting)
+    # TODO: Migrate to official sonarsource/sonarqube-scan-action or SonarCloud
     name: Create SonarQube Report
     runs-on: ubuntu-latest
     needs: [sonarqube-backend, sonarqube-frontend]
-    if: github.event_name == 'pull_request'
+    if: false
 
     steps:
       - name: Comment PR with SonarQube results
