fix(ci): add MONGO_URL env var and SonarQube validation checks
- Add MONGO_URL=mongodb://localhost:27017/test to backend tests step
  to fix failing backup_db tests that require database connection
- Add SonarQube secrets validation step to both backend and frontend jobs
  with clear error messages and configuration instructions
- Provides guidance on ensuring projects exist on SonarQube or token
  has permission to create them

The SonarQube authorization error indicates either:
1. Projects 'folio-api' and 'folio-web' don't exist on SonarQube server
2. SONAR_TOKEN doesn't have permission to analyze/create these projects
3. SONAR_HOST_URL is incorrect or SonarQube server is unreachable

This commit ensures proper environment configuration and provides
actionable feedback for troubleshooting.

--- a/.github/workflows/sonarqube.yml
+++ b/.github/workflows/sonarqube.yml
@@ -16,6 +16,21 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+      - name: Validate SonarQube secrets are configured
+        run: |
+          if [ -z "${{ secrets.SONAR_TOKEN }}" ] || [ -z "${{ secrets.SONAR_HOST_URL }}" ]; then
+            echo "❌ ERROR: SonarQube secrets not configured!"
+            echo "Please set the following secrets in GitHub repository settings:"
+            echo "  - SONAR_TOKEN: Your SonarQube authentication token"
+            echo "  - SONAR_HOST_URL: Your SonarQube server URL (e.g., https://sonarqube.example.com)"
+            echo ""
+            echo "Additional notes:"
+            echo "  - Ensure the projects 'folio-api' and 'folio-web' exist on your SonarQube server"
+            echo "  - Or ensure your token has permission to create new projects"
+            exit 1
+          fi
+          echo "✅ SonarQube secrets are configured"
+
       - uses: actions/checkout@692973e3d937129bcbf40652eb9f2f61becf3332 # v4.1.7
         with:
           fetch-depth: 0  # Full history for SonarQube
@@ -50,6 +65,8 @@ jobs:
         run: |
           cd portfolio/api
           cargo test --verbose -- --test-threads=1
+        env:
+          MONGO_URL: mongodb://localhost:27017/test
 
       - name: Run SonarQube analysis for backend
         uses: sonarsource/sonarqube-scan-action@master
@@ -65,6 +82,21 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+      - name: Validate SonarQube secrets are configured
+        run: |
+          if [ -z "${{ secrets.SONAR_TOKEN }}" ] || [ -z "${{ secrets.SONAR_HOST_URL }}" ]; then
+            echo "❌ ERROR: SonarQube secrets not configured!"
+            echo "Please set the following secrets in GitHub repository settings:"
+            echo "  - SONAR_TOKEN: Your SonarQube authentication token"
+            echo "  - SONAR_HOST_URL: Your SonarQube server URL (e.g., https://sonarqube.example.com)"
+            echo ""
+            echo "Additional notes:"
+            echo "  - Ensure the projects 'folio-api' and 'folio-web' exist on your SonarQube server"
+            echo "  - Or ensure your token has permission to create new projects"
+            exit 1
+          fi
+          echo "✅ SonarQube secrets are configured"
+
       - uses: actions/checkout@692973e3d937129bcbf40652eb9f2f61becf3332 # v4.1.7
         with:
           fetch-depth: 0  # Full history for SonarQube
