fix(ci): add missing MongoDB environment variables to backend tests
The backup_db tests require MONGO_DB and DATABASE_NAME variables
in addition to MONGO_URL. These are already configured in GitHub
secrets, so we now pass them to the test environment.

Tests should now pass when executed in CI.

--- a/.github/workflows/sonarqube.yml
+++ b/.github/workflows/sonarqube.yml
@@ -66,7 +66,9 @@ jobs:
           cd portfolio/api
           cargo test --verbose -- --test-threads=1
         env:
-          MONGO_URL: mongodb://localhost:27017/test
+          MONGO_URL: ${{ secrets.MONGO_URL }}
+          MONGO_DB: ${{ secrets.MONGO_DB }}
+          DATABASE_NAME: ${{ secrets.DATABASE_NAME }}
 
       - name: Run SonarQube analysis for backend
         uses: sonarsource/sonarqube-scan-action@master
