--- a/portfolio/api/Cargo.toml
+++ b/portfolio/api/Cargo.toml
@@ -47,9 +47,11 @@ once_cell = "1.20.2"
 urlencoding = "2.1.3"
 
 [dev-dependencies]
+fake = "2.9"
 filetime = "0.2.26"
 mockito = "1.6.1"
 tempfile = "3.23.0"
+testcontainers = "0.23"
 # Testing
 tokio-test = "0.4"
 wiremock = "0.6.5"
