--- a/portfolio/web/.gitignore
+++ b/portfolio/web/.gitignore
@@ -28,8 +28,11 @@ pnpm-debug.log*
 
 # jetbrains setting folder
 .idea/
+
+# test artifacts
 /test-results/
 /playwright-report/
 /blob-report/
 /playwright/.cache/
+/coverage/
 *.log
