--- a/portfolio/web/package.json
+++ b/portfolio/web/package.json
@@ -1,45 +1,65 @@
 {
-    "name": "web",
-    "type": "module",
-    "version": "0.0.1",
-    "engines": {
-        "node": ">=20.0.0"
-    },
-    "scripts": {
-        "dev": "astro dev",
-        "start": "astro dev",
-        "build": "npm run generate-pwa && astro build",
-        "preview": "astro preview",
-        "astro": "astro",
-        "test:e2e": "cross-env MODE=test PUBLIC_API_URL=http://localhost:8080 playwright test",
-        "test:e2e:ci": "cross-env MODE=test PUBLIC_API_URL=http://localhost:8080 playwright test --retries=2 --workers=1",
-        "test:e2e:ui": "cross-env MODE=test PUBLIC_API_URL=http://localhost:8080 playwright test --ui",
-        "test:e2e:debug": "cross-env MODE=test PUBLIC_API_URL=http://localhost:8080 playwright test --debug",
-        "test:e2e:single": "cross-env MODE=test PUBLIC_API_URL=http://localhost:8080 playwright test --project=chromium",
-        "generate-pwa": "node scripts/generate-pwa-assets.js"
-    },
-    "dependencies": {
-        "@astrojs/check": "^0.9.5",
-        "@astrojs/mdx": "^4.3.8",
-        "@astrojs/partytown": "^2.1.4",
-        "@astrojs/sitemap": "^3.6.0",
-        "@fortawesome/fontawesome-free": "^7.1.0",
-        "@tailwindcss/vite": "^4.1.16",
-        "astro": "^5.15.1",
-        "sharp": "^0.34.4",
-        "tailwindcss": "^4.1.16",
-        "three": "^0.180.0",
-        "workbox-window": "^7.3.0"
-    },
-    "devDependencies": {
-        "@playwright/test": "^1.56.1",
-        "@tailwindcss/postcss": "^4.1.16",
-        "@types/node": "^24.9.1",
-        "@types/three": "^0.180.0",
-        "@vite-pwa/astro": "^1.1.1",
-        "autoprefixer": "^10.4.21",
-        "cross-env": "^10.1.0",
-        "postcss": "^8.5.6",
-        "typescript": "^5.9.3"
-    }
+  "name": "web",
+  "type": "module",
+  "version": "0.0.1",
+  "engines": {
+    "node": ">=20.0.0"
+  },
+  "scripts": {
+    "dev": "astro dev",
+    "start": "astro dev",
+    "build": "npm run generate-pwa && astro build",
+    "preview": "astro preview",
+    "astro": "astro",
+    "test": "vitest",
+    "test:watch": "vitest --watch",
+    "test:coverage": "vitest run --coverage",
+    "test:ui": "vitest --ui",
+    "test:e2e": "cross-env MODE=test PUBLIC_API_URL=http://localhost:8080 playwright test",
+    "test:e2e:ci": "cross-env MODE=test PUBLIC_API_URL=http://localhost:8080 playwright test --retries=2 --workers=1",
+    "test:e2e:ui": "cross-env MODE=test PUBLIC_API_URL=http://localhost:8080 playwright test --ui",
+    "test:e2e:debug": "cross-env MODE=test PUBLIC_API_URL=http://localhost:8080 playwright test --debug",
+    "test:e2e:single": "cross-env MODE=test PUBLIC_API_URL=http://localhost:8080 playwright test --project=chromium",
+    "generate-pwa": "node scripts/generate-pwa-assets.js"
+  },
+  "dependencies": {
+    "@astrojs/check": "^0.9.5",
+    "@astrojs/mdx": "^4.3.8",
+    "@astrojs/partytown": "^2.1.4",
+    "@astrojs/sitemap": "^3.6.0",
+    "@fortawesome/fontawesome-free": "^7.1.0",
+    "@tailwindcss/vite": "^4.1.16",
+    "astro": "^5.15.1",
+    "sharp": "^0.34.4",
+    "tailwindcss": "^4.1.16",
+    "three": "^0.180.0",
+    "workbox-window": "^7.3.0"
+  },
+  "devDependencies": {
+    "@axe-core/playwright": "^4.11.0",
+    "@playwright/test": "^1.56.1",
+    "@tailwindcss/postcss": "^4.1.16",
+    "@testing-library/dom": "^10.4.1",
+    "@types/node": "^24.9.1",
+    "@types/three": "^0.180.0",
+    "@typescript-eslint/eslint-plugin": "^8.46.2",
+    "@typescript-eslint/parser": "^8.46.2",
+    "@vite-pwa/astro": "^1.1.1",
+    "@vitest/coverage-v8": "^4.0.3",
+    "@vitest/ui": "^4.0.3",
+    "astro-eslint-parser": "^1.2.2",
+    "autoprefixer": "^10.4.21",
+    "cross-env": "^10.1.0",
+    "eslint": "^9.38.0",
+    "eslint-config-prettier": "^10.1.8",
+    "eslint-plugin-astro": "^1.3.1",
+    "eslint-plugin-prettier": "^5.5.4",
+    "jsdom": "^27.0.1",
+    "msw": "^2.11.6",
+    "postcss": "^8.5.6",
+    "prettier": "^3.6.2",
+    "prettier-plugin-astro": "^0.14.1",
+    "typescript": "^5.9.3",
+    "vitest": "^4.0.3"
+  }
 }
