--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,13 +17,15 @@ permissions:
 env:
   MONGO_USER: ${{ secrets.MONGO_USER }}
   MONGO_PASSWORD: ${{ secrets.MONGO_PASSWORD }}
-  MONGO_DB: ${{ secrets.MONGO_DB }}
+  MONGO_DB: ${{ secrets.MONGO_DB || 'portfolio_test' }}
   MONGO_URL: ${{ secrets.MONGO_URL }}
-  MONGO_INITDB_ROOT_USERNAME: ${{ secrets.MONGO_INITDB_ROOT_USERNAME }}
-  MONGO_INITDB_ROOT_PASSWORD: ${{ secrets.MONGO_INITDB_ROOT_PASSWORD }}
-  DATABASE_NAME: ${{ secrets.DATABASE_NAME }}
-  BACKUP_DIR: ${{ secrets.BACKUP_DIR }}
-  RETENTION_DAYS: ${{ secrets.RETENTION_DAYS }}
+  MONGO_INITDB_ROOT_USERNAME: ${{ secrets.MONGO_INITDB_ROOT_USERNAME || 'mongodb' }}
+  MONGO_INITDB_ROOT_PASSWORD: ${{ secrets.MONGO_INITDB_ROOT_PASSWORD || 'mongodb_password' }}
+  MONGO_HOST: 127.0.0.1
+  MONGO_PORT: 27017
+  DATABASE_NAME: ${{ secrets.DATABASE_NAME || 'portfolio' }}
+  BACKUP_DIR: ${{ secrets.BACKUP_DIR || '/tmp/backups' }}
+  RETENTION_DAYS: ${{ secrets.RETENTION_DAYS || '7' }}
   BREVO_API_KEY: ${{ secrets.BREVO_API_KEY }}
   RECIPIENT_EMAIL: ${{ secrets.RECIPIENT_EMAIL }}
   SENDER_NAME: ${{ secrets.SENDER_NAME }}
