--- a/.github/workflows/sonarqube.yml
+++ b/.github/workflows/sonarqube.yml
@@ -10,10 +10,42 @@ permissions:
   contents: read
   pull-requests: write
 
+env:
+  MONGO_USER: ${{ secrets.MONGO_USER }}
+  MONGO_PASSWORD: ${{ secrets.MONGO_PASSWORD }}
+  MONGO_DB: ${{ secrets.MONGO_DB || 'portfolio_test' }}
+  MONGO_URL: ${{ secrets.MONGO_URL }}
+  MONGO_INITDB_ROOT_USERNAME: ${{ secrets.MONGO_INITDB_ROOT_USERNAME || 'mongodb' }}
+  MONGO_INITDB_ROOT_PASSWORD: ${{ secrets.MONGO_INITDB_ROOT_PASSWORD || 'mongodb_password' }}
+  MONGO_HOST: 127.0.0.1
+  MONGO_PORT: 27017
+  DATABASE_NAME: ${{ secrets.DATABASE_NAME || 'portfolio' }}
+  BREVO_API_KEY: ${{ secrets.BREVO_API_KEY }}
+  RECIPIENT_EMAIL: ${{ secrets.RECIPIENT_EMAIL }}
+  SENDER_NAME: ${{ secrets.SENDER_NAME }}
+  SENDER_EMAIL: ${{ secrets.SENDER_EMAIL }}
+  HOST: ${{ secrets.HOST }}
+  PORT: ${{ secrets.PORT }}
+
 jobs:
   sonarqube-backend:
     name: SonarQube Backend (Rust/Axum)
     runs-on: ubuntu-latest
+
+    services:
+      mongodb:
+        image: mongo:7.0
+        env:
+          MONGO_INITDB_ROOT_USERNAME: ${{ env.MONGO_INITDB_ROOT_USERNAME }}
+          MONGO_INITDB_ROOT_PASSWORD: ${{ env.MONGO_INITDB_ROOT_PASSWORD }}
+          MONGO_INITDB_DATABASE: ${{ env.MONGO_DB }}
+        ports:
+          - 27017:27017
+        options: >-
+          --health-cmd "mongosh --quiet --eval 'db.runCommand(\"ping\").ok'"
+          --health-interval 10s
+          --health-timeout 5s
+          --health-retries 5
 
     steps:
       - name: Validate SonarQube secrets are configured
@@ -90,10 +122,6 @@ jobs:
         run: |
           cd portfolio/api
           cargo test --verbose -- --test-threads=1
-        env:
-          MONGO_URL: ${{ secrets.MONGO_URL }}
-          MONGO_DB: ${{ secrets.MONGO_DB }}
-          DATABASE_NAME: ${{ secrets.DATABASE_NAME }}
 
       - name: Run SonarQube analysis for backend
         uses: sonarsource/sonarqube-scan-action@master
