📊 feat(sonarqube): add code coverage reports for SonarQube analysis
Adds comprehensive code coverage reporting for both backend and frontend, fixing the "Coverage = 0" issue on SonarQube.

## Backend Changes (Rust/Axum)
- Install cargo-tarpaulin for accurate Rust coverage measurement
- Generate LCOV format reports compatible with SonarQube
- Exclude tests and benches from coverage metrics
- Configure SonarQube to read LCOV reports from target/coverage/lcov.info
- Timeout set to 300s to handle large test suites

## Frontend Changes (TypeScript/Astro)
- Add lcov reporter to vitest coverage configuration
- Split coverage and E2E testing into separate steps
- Run unit tests with `npm run test:coverage` to generate coverage reports
- Run E2E tests separately with `npm run test:e2e:ci`
- Configure SonarQube to read LCOV reports from coverage/lcov.info

## Coverage Metrics
- Backend: Rust code analyzed with tarpaulin (excludes test code)
- Frontend: TypeScript/Astro analyzed with vitest v8 provider
- Both generate LCOV format reports (standard for SonarQube)
- Consistent exclusion of test files from coverage calculations

## Expected Results
- SonarQube will now display coverage metrics
- Coverage trends will be tracked over time
- Code quality gates can be configured based on coverage %
- Pull request comments will include coverage changes

This fix addresses the root cause: missing coverage report generation and SonarQube configuration.

--- a/.github/workflows/sonarqube.yml
+++ b/.github/workflows/sonarqube.yml
@@ -118,16 +118,26 @@ jobs:
           fi
           cargo build --verbose
 
+      - name: Install cargo-tarpaulin
+        run: cargo install cargo-tarpaulin
+
       - name: Run tests with coverage
         run: |
           cd portfolio/api
-          cargo test --verbose -- --test-threads=1
+          # Run tests with coverage using tarpaulin
+          # Generates LCOV report for SonarQube
+          cargo tarpaulin --out Lcov --output-dir target/coverage --timeout 300 --exclude-files tests/* --exclude-files benches/* -- --test-threads=1
+
+          # Ensure coverage directory exists for SonarQube
+          mkdir -p target/coverage
 
       - name: Run SonarQube analysis for backend
         uses: sonarsource/sonarqube-scan-action@master
         with:
           args: >
             -Dsonar.projectBaseDir=portfolio/api
+            -Dsonar.coverageReportPaths=target/coverage/lcov.info
+            -Dsonar.coverage.exclusions=tests/**,benches/**
         env:
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
           SONAR_HOST_URL: ${{ secrets.SONAR_HOST_URL }}
@@ -198,16 +208,23 @@ jobs:
           cd portfolio/web
           npm run build
 
-      - name: Run tests and generate coverage
+      - name: Run unit tests with coverage
         run: |
           cd portfolio/web
-          npm run test:e2e || true
+          npm run test:coverage
+
+      - name: Run E2E tests
+        run: |
+          cd portfolio/web
+          npm run test:e2e:ci || true
 
       - name: Run SonarQube analysis for frontend
         uses: sonarsource/sonarqube-scan-action@master
         with:
           args: >
             -Dsonar.projectBaseDir=portfolio/web
+            -Dsonar.coverageReportPaths=coverage/lcov.info
+            -Dsonar.coverage.exclusions=**/*.spec.ts,**/*.test.ts,**/node_modules/**,**/.astro/**
         env:
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
           SONAR_HOST_URL: ${{ secrets.SONAR_HOST_URL }}
